--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
+    "lodash": "4.17.21",
     "next": "10.0.3",
     "next-images": "^1.6.2",
     "react": "17.0.1",
