--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.30.0",
+    "ssri": "6.0.2",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1"
   },
